HHH-5942 - Migrate to JUnit 4